# simple-reflection

./: CMakeLists.txt
cmake/: simple-reflection-config.cmake
src/: CMakeLists.txt
src/simple-reflection/: simple-reflection.h
tests/: CMakeLists.txt  declarations.cpp
